# cnmayun

./: .env.production.example  .gitignore  README.md  pyproject.toml  update_norm.py
app/: __init__.py  ai_extractor.py  bootstrap.py  cninfo.py  config.py  db.py  document_parser.py  event_propagation.py  main.py  models.py  normalization.py  notice_pipeline.py  project_memory.py  schemas.py  seed.py  services.py  services_base.py  stats_aggregator.py  tasks.py
data/: bj_stock.json  china_succession_deploy.db-journal  cninfo_common.js  cninfo_home.html  cninfo_index.js  cninfo_mini.js  cninfo_new_index.html  cninfo_stock_300750.html  cninfo_stock_600519.html  deployment_credentials.txt  executives_600519.json  introduction_600519.json  person_stock_news.js  project_memory.json  sync_remaining_runner.py  szse_stock.json
docs/: PROJECT_MASTER_PLAN.md  PROJECT_STATUS.md
runner/: DATA_BACKFILL_REPORT.md  DATA_ENRICHMENT_PLAN.md  DATA_ENRICHMENT_PROPOSALS.md  OPERATIONS.md  UI_REDESIGN_V2.md  analyze_event_gaps.py  analyze_events_for_start_date.py  analyze_missing_start_dates.py  analyze_orphan_docs.py  analyze_start_date_gaps.py  analyze_unmatched_events.py  apply_security_updates.py  auto_review_pending.py  backfill_bj_basic.py  backfill_bj_tenure_start.py  backfill_city_enhanced.py  backfill_company_info.py  backfill_company_location.py  backfill_company_location_v2.py  backfill_company_location_v3.py  backfill_company_location_v4.py  backfill_compensation.py  backfill_compensation_missing.py  backfill_financials.py  backfill_financials_multi_period.py  (+96 more)
(+70 files in other folders)
